--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
  <h4>ans:    [ '123.5', '789.0', '345.7' ]</h4> <br> 
  
  generate random otp 5 digit num using math.random
+
+
+ <h1>TO SEE THE OUT PUT DO INSPECT AND GO TO CONSOLE</h1>
     
 </body>
 <script src="task10.js">
